fixes mobile styles for the text to be legible on some sections

--- a/style.css
+++ b/style.css
@@ -287,6 +287,7 @@ hr {
 		background-size: 0;
 	}
 
+	.home-foot-img .container,
 	.what-is .container {
 		width: 100%;
 	}
@@ -311,17 +312,6 @@ hr {
 	.home-foot-img {
 		background-color: #005373;
 		color: #fff;
-	}
-
-	.home-foot-img a {
-		color: #fff;
-		border-color: #fff;
-	}
-
-	.home-foot-img a:hover {
-		background: #cebb57;
-		border-color: #cebb57;
-		color: #005373;
 	}
 }
 
@@ -349,8 +339,22 @@ hr {
 		width: 100%;
 	}
 
+	.home-foot-img {
+		background-color: #005373;
+		color: #fff;
+	}
+
+	.home-foot-img a {
+		color: #fff;
+		border-color: #fff;
+	}
+}
+
+@media (min-width: 416px) and (max-width: 1024px) {
+
 	.home-foot-img .container {
-		width: 100%;
+		width: 50%;
+		float: left;
 	}
 }
 /*# sourceMappingURL=style.css.map */
